crates/cherry-pit-core/tests/compile_fail/domain_event_requires_clone.stderr
error[E0277]: the trait bound `NotCloneable: Encode` is not satisfied
  --> tests/compile_fail/domain_event_requires_clone.rs:15:22
   |
15 | impl DomainEvent for NotCloneable {
   |                      ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Encode` is not implemented for `NotCloneable`
  --> tests/compile_fail/domain_event_requires_clone.rs:11:1
   |
11 | struct NotCloneable {
   | ^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `Encode`:
             &[u8]
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required by a bound in `DomainEvent`
  --> src/event.rs
   |
   | pub trait DomainEvent: Clone + Send + Sync + 'static + pardosa_encoding::Encode {
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DomainEvent`

error[E0277]: the trait bound `NotCloneable: Clone` is not satisfied
  --> tests/compile_fail/domain_event_requires_clone.rs:15:22
   |
15 | impl DomainEvent for NotCloneable {
   |                      ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NotCloneable`
   |
note: required by a bound in `DomainEvent`
  --> src/event.rs
   |
   | pub trait DomainEvent: Clone + Send + Sync + 'static + pardosa_encoding::Encode {
   |                        ^^^^^ required by this bound in `DomainEvent`
help: consider annotating `NotCloneable` with `#[derive(Clone)]`
   |
11 + #[derive(Clone)]
12 | struct NotCloneable {
   |
